# figure

./: CMakeLists.txt  Figure.cpp  Figure.h  main.cpp  Реализация в лоб (не по четвертям).txt  Через точку ноль.txt
